# faceless-gen

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/: main.py
backend/api/routes/: generate.py  history.py  music.py  projects.py
backend/assets/music/: tracks.json
backend/assets/personas/default/: character.md  personality.md
backend/models/: config.py  job.py  project.py  schemas.py
backend/pipeline/: editorial.py  graph.py  state.py
backend/pipeline/nodes/: assembly.py  audio.py  image_gen.py  persona.py  scripting.py  video.py
backend/providers/: audio_utils.py  image_backend.py  llm.py  tts.py  video_backend.py
backend/storage/: database.py  job_store.py  project_repo.py
backend/tests/: test_api.py  test_config.py  test_editorial.py  test_graph.py  test_job_store.py  test_nodes.py  test_pipeline_project.py  test_project_repo.py  test_projects_api.py  test_providers.py  test_state.py
docs/: wan-invocation.md
docs/plans/: 01-repo-and-env.md  02-pipeline.md  03-backend-api.md  04-frontend.md  05-project-persistence.md  06-editorial-llm-nodes.md  07-project-api-routes.md  08-frontend-editorial-wizard.md  09-music-and-generation.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: GenerateForm.tsx  Layout.tsx  ProgressLog.tsx  ProjectsList.tsx  SettingsView.tsx  VideoCard.tsx  VideoHistory.tsx
frontend/src/hooks/: useGenerate.ts  useHistory.ts
frontend/src/lib/: api.ts
scripts/: download_model.sh  verify_mps.py
(+6 files in other folders)
