[project]
name = "faceless-gen"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "elevenlabs>=2.0",
    "movielite>=0.2.2",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pillow>=10.0",
    "tqdm>=4.0",
    "sqlmodel>=0.0.18",
    "aiosqlite>=0.20",
    "sqlalchemy>=2.0",
    "torch>=2.1",
    "torchvision>=0.16",
    "torchaudio>=2.1",
    "diffusers>=0.32",
    "transformers>=4.40",
    "accelerate>=0.30",
    "imageio>=2.30",
    "imageio-ffmpeg>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
